# MT5_Autotester_agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  app_ui.py  app_ui_dashboard_logic.py  app_ui_multiterminal_logic.py  app_ui_multiterminal_view.py  app_ui_portfolio_logic.py  app_ui_portfolio_view.py  app_ui_settings_logic.py  app_ui_settings_view.py  app_ui_ubs_agent_logic.py  app_ui_ubs_params_logic.py  app_ui_ubs_results_logic.py  app_ui_ubs_results_view.py  app_ui_ubs_seeds_logic.py  app_ui_ubs_universe_logic.py  app_ui_ubs_universe_view.py  compile_and_backtest.bat  compile_and_backtest.py  compile_mq5.bat  compile_mq5.py  compile_root.txt  dry_run.bat  experts_list.txt  experts_root.txt  mt5_env.py  pyproject.toml  requirements.md  requirements.txt  run_tests.py  run_ui.bat  telegram_notify.py  ubs_agent.py  ubs_generate_sets.py  ubs_memory.py  ubs_models.py  (+5 more)
ai_context/: 01-overview.md  02-architecture.md  03-mt5-workflow.md  04-portfolio-manager.md  05-environment.md  06-conventions.md  07-development.md  08-ubs-parameters.md  09-design-system.md  main.md
assets/: roboforex_assets.ini  roboforex_normalization.json
experts/: Ultimate Breakout System_4.3.ex5
live_sets/: DaytradePro_CHFJPY.set  DaytradePro_EURUSD.set  DaytradePro_GBPUSD.set  DaytradePro_XAUUSD.set  EURUSD_e.set  EURUSD_f.set  EURUSD_i.set  EURUSD_k.set  EURUSD_l.set  EURUSD_m.set  EURUSD_o.set  GOLDTRADEPRO_E.set  GOLDTRADEPRO_H.set  GOLDTRADEPRO_d.set  Gold_a.set  Gold_b.set  Gold_c.set  H1_F.set  H1_H.set  H1_J.set  H1_O.set  IND_US30_3.set  IND_US30_4.set  (+7 more)
(+1486 files in other folders)
